--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 	<body>
 		//js file link
 		<script src="./func.js"></script>
+		//js file link
+		<script src="./loop.js"></script>
+		//js file link
+		<!-- <script src="./str.js"></script> -->
 	</body>
 </html>
