--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<title>Document</title>
 	</head>
 	<body>
-		//js file link
-		<script src="./func.js"></script>
-		//js file link
+		<h2>hgafhf</h2>
+		<scipt src="./objfun.js"></script>
+		<!-- <script src="./func.js"></script>
 		<script src="./loop.js"></script>
-		//js file link
-		<!-- <script src="./str.js"></script> -->
+		<script src="./str.js"></script> -->
+		
 	</body>
 </html>
