--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		<h2>hgafhf</h2>
-		<scipt src="./objfun.js"></script>
+
+		<script src="./objfun.js"></script>
 		<!-- <script src="./func.js"></script>
 		<script src="./loop.js"></script>
 		<script src="./str.js"></script> -->
-		
 	</body>
 </html>
