--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 	<body>
 		<h2>hgafhf</h2>
 
-		<script src="./objfun.js"></script>
+		<!-- <script src="./objfun.js"></script> -->
 		<!-- <script src="./func.js"></script>
 		<script src="./loop.js"></script>
 		<script src="./str.js"></script> -->
+		<!-- <script src="./extra_ass.js"></script> -->
+		<script src="/arrAandStr.js"></script>
 	</body>
 </html>
